--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <title>Voice Log AI</title>
+  <title>Notas de Voz IA</title>
   
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="V-Log">
-  <meta name="theme-color" content="#6366f1">
+  <meta name="theme-color" content="#4f46e5">
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/5968/5968517.png">
 
@@ -19,12 +18,30 @@
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap');
     body { 
       font-family: 'Inter', sans-serif; 
-      background-color: #f1f5f9;
+      background-color: #f8fafc;
       margin: 0;
-      color: #0f172a;
+      color: #1e293b;
+      -webkit-tap-highlight-color: transparent;
     }
-    #root { min-height: 100vh; display: flex; flex-direction: column; }
-    .safe-bottom { padding-bottom: env(safe-area-inset-bottom); }
+    #root { min-height: 100vh; }
+    .loading-screen {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background: #ffffff;
+      gap: 20px;
+    }
+    .spinner {
+      width: 40px;
+      height: 40px;
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #4f46e5;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
   </style>
   <script type="importmap">
 {
@@ -41,11 +58,38 @@
 </head>
 <body>
   <div id="root">
-    <div id="initial-loader" style="display:flex; flex-direction:column; align-items:center; justify-content:center; height:100vh; gap:15px; background:#f8fafc;">
-      <div style="width:30px; height:30px; border:3px solid #e2e8f0; border-top-color:#6366f1; border-radius:50%; animation: spin 0.8s linear infinite;"></div>
-      <p style="font-weight:800; font-size:10px; letter-spacing:0.2em; color:#6366f1; text-transform:uppercase;">Cargando Sistema</p>
+    <div class="loading-screen" id="app-loader">
+      <div class="spinner"></div>
+      <div style="text-align: center;">
+        <p style="font-weight: 900; font-size: 12px; letter-spacing: 0.2em; color: #4f46e5; margin: 0;">CARGANDO SISTEMA</p>
+        <p style="font-size: 10px; color: #94a3b8; margin-top: 5px;">Iniciando IA Interna...</p>
+      </div>
+      <button id="panic-button" style="display:none; margin-top: 20px; font-size: 10px; font-weight: 800; color: #ef4444; border: 1px solid #fee2e2; padding: 8px 16px; border-radius: 20px;" onclick="window.location.reload()">REINTENTAR CARGA</button>
     </div>
   </div>
-  <style>@keyframes spin { to { transform: rotate(360deg); } }</style>
+  <script>
+    // Si en 4 segundos no ha cargado, mostrar botón de reintento
+    setTimeout(() => {
+      const btn = document.getElementById('panic-button');
+      if (btn) btn.style.display = 'block';
+    }, 4000);
+
+    // Capturar errores para diagnóstico
+    window.onerror = function(msg, url, lineNo, columnNo, error) {
+      console.error(msg);
+      const loader = document.getElementById('app-loader');
+      if (loader) {
+        loader.innerHTML = `
+          <div style="padding: 20px; text-align: center;">
+            <i class="fas fa-exclamation-triangle" style="color:#ef4444; font-size: 30px; margin-bottom: 15px;"></i>
+            <p style="font-weight: 900; color:#1e293b;">ERROR DE ARRANQUE</p>
+            <p style="font-size: 11px; color:#64748b; margin: 10px 0;">${msg}</p>
+            <button onclick="window.location.reload()" style="background:#4f46e5; color:white; padding:10px 20px; border-radius:10px; border:none; font-weight:bold; margin-top: 10px;">REINTENTAR</button>
+          </div>
+        `;
+      }
+      return false;
+    };
+  </script>
 </body>
 </html>
