--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -9,34 +10,35 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="theme-color" content="#4f46e5">
   <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/5968/5968517.png">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
     body { 
       font-family: 'Inter', sans-serif; 
       background-color: #f8fafc;
       margin: 0;
-      -webkit-tap-highlight-color: transparent;
+      overflow-x: hidden;
     }
     .loading-screen {
+      position: fixed;
+      inset: 0;
+      background: white;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      background: #ffffff;
-      position: fixed;
-      inset: 0;
       z-index: 9999;
+      transition: opacity 0.5s ease;
     }
     .spinner {
-      width: 30px;
-      height: 30px;
-      border: 3px solid #f3f3f3;
-      border-top: 3px solid #4f46e5;
+      width: 40px;
+      height: 40px;
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #4f46e5;
       border-radius: 50%;
       animation: spin 1s linear infinite;
     }
@@ -59,7 +61,7 @@
 <body>
   <div id="app-loader" class="loading-screen">
     <div class="spinner"></div>
-    <p style="margin-top: 15px; font-weight: 900; font-size: 10px; color: #4f46e5; letter-spacing: 0.2em; text-transform: uppercase;">Iniciando App</p>
+    <p style="margin-top: 20px; font-weight: 900; font-size: 12px; color: #4f46e5; letter-spacing: 0.1em; text-transform: uppercase;">Iniciando Sistema</p>
   </div>
   <div id="root"></div>
 </body>
