--- a/index.html
+++ b/index.html
@@ -5,46 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>V-Log IA</title>
-  
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="theme-color" content="#4f46e5">
-  <link rel="manifest" href="manifest.json">
-  <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/5968/5968517.png">
-
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
-    body { 
-      font-family: 'Inter', sans-serif; 
-      background-color: #f8fafc;
-      margin: 0;
-      overflow-x: hidden;
-    }
-    .loading-screen {
-      position: fixed;
-      inset: 0;
-      background: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-      transition: opacity 0.5s ease;
-    }
-    .spinner {
-      width: 40px;
-      height: 40px;
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #4f46e5;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-    }
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap');
+    body { font-family: 'Inter', sans-serif; background-color: #f8fafc; margin: 0; }
+    .loading-screen { position: fixed; inset: 0; background: white; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 9999; }
+    .spinner { width: 30px; height: 30px; border: 3px solid #f3f3f3; border-top: 3px solid #4f46e5; border-radius: 50%; animation: spin 1s linear infinite; }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
   </style>
-
   <script type="importmap">
 {
   "imports": {
@@ -61,8 +33,9 @@
 <body>
   <div id="app-loader" class="loading-screen">
     <div class="spinner"></div>
-    <p style="margin-top: 20px; font-weight: 900; font-size: 12px; color: #4f46e5; letter-spacing: 0.1em; text-transform: uppercase;">Iniciando Sistema</p>
+    <p style="margin-top: 15px; font-weight: 900; font-size: 10px; color: #4f46e5; letter-spacing: 0.1em; text-transform: uppercase;">Cargando Aplicación...</p>
   </div>
   <div id="root"></div>
+  <script type="module" src="index.tsx"></script>
 </body>
 </html>
